# zip-ignore

./: .gitignore  .zipignore  LICENSE  README.md  pyproject.toml  zip_ignore.py
tests/: test_zip_ignore.py
