[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zip-ignore"
version = "0.1.0"
description = "A small tool to create ZIP archives respecting gitignore-style exclusion rules."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pathspec>=0.11.0",
]

[project.scripts]
zip-ignore = "zip_ignore:main"